<resources>
    <string name="app_name">application1</string>

    //layout textview
    <string name="name">Name :</string>
    <string name="contact_number">Contact Number :</string>
    <string name="contacts">Contacts</string>
    <string name="contact">Contact</string>
    <string name="add_img">Profile</string>
    <string name="wrong">Your access is denied!</string>
    <string name="close">CLOSE</string>
    <string name="setting">GO TO SETTING</string>

    //layout button
    <string name="add_button">Add</string>
    <string name="addContact_button">Add Contact</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">SAVE</string>
    <string name="selfie">Take photo</string>
    <string name="choose_img">Choose from gallery</string>

    //toast message
    <string name="delSuccessMsg">Delete Successfully!</string>
    <string name="addSuccessMsg">Added Successfully!</string>
    <string name="editSuccessMsg">Edited Successfully!</string>
    <string name="permission_result">Permission denied!!!</string>

    //validation add contact message
    <string name="validNameShort">Name cannot be less than 3 character</string>
    <string name="validNameLong">Name cannot be more than 50 character</string>
    <string name="validEmpty">Field cannot be empty</string>

    //alert dialog
    <string name="delAlertTitle">Delete Contact</string>
    <string name="delAlertMsg">Are you sure want to delete this contact?</string>
    <string name="alertYes">Yes</string>
    <string name="alertNo">No</string>

    <string name="data">data</string>
    <string name="photo_dir">imageDir</string>
</resources>