<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:text="@string/name"
        android:textSize="25sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_name"
        android:textColor="#000000"
        android:inputType="text"
        android:layout_below="@+id/name"
        android:enabled="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contact"
        android:text="@string/contact_number"
        android:textSize="25sp"
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_below="@+id/edit_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_phone"
        android:layout_below="@+id/contact"
        android:textColor="#000000"
        android:inputType="text"
        android:enabled="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editContactBtn"
        android:text="@string/edit"
        android:layout_below="@+id/edit_phone"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deleteBtn"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:layout_below="@+id/edit_phone"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="15dp"/>
</RelativeLayout>