<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        app:errorEnabled="true"
        android:hint="@string/name"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_name"
            android:textColor="#000000"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contact_number"
        app:errorEnabled="true"
        android:hint="@string/contact_number"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_phone"
            android:textColor="#000000"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addBtn"
        android:text="@string/add_button"
        android:textAllCaps="false"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>